:zap: DefineClassStrategy